test/param/diten/castParamToClass.good
castParamToClass.chpl:3 error: Cannot cast from int to class object
