test/param/diten/castParamToClass.future
bug: cast from int param to class type causes internal error
